--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "graphql": "^16.5.0",
     "react": "^18.2.0",
